# fdupes

./: Cargo.toml  build.rs
src/: deep_readdir.rs  file_closer.rs  indexer.rs  main.rs  multi_thread_iter.rs
