[package]
name = "fdupes"
version = "0.1.1"
edition = "2021"
description = "a tool to help find and delete duplicate files"
license = "MIT"

[dependencies]
bpaf = { version = "0.9.15", features = ["derive"] }
anyhow = "1.0.92"
const_format = "0.2.33"
sha2 = "0.10"
num_cpus = "1.16.0"
borsh = { version = "1.5.5", features = ["derive", "rc"] }

[build-dependencies]
rustc_version = "0.4.1"
chrono = "0.4.38"
semver = "1.0.23"
